PulseAudio automatically switches to HDMI sound output on login
On my freshly installed Ubuntu 19.10 with pulseaudio 13.0-1ubuntu1 I have two output devices:
- HDMI/DisplayPort 2 - GK208 ...
- Line Out - Family 17h ...
When I login into the system pulseaudio always selects the "wrong" one (HDMI) and I need to go to gnome-settings/Sound/Output Device and switch to "line out". This applies to every login/logout not just reboots.
It seems this is an issue with the module-switch-on-connect which is used in Ubuntu by default. If I comment out this module in the default.pa config audio selection works fine.
Happy to provide more info if needed. The ubuntu bugreport is available under https://bugs.launchpad.net/ubuntu/+source/pulseaudio/+bug/1847570 - Daniel van Vugt suggested there to report this issue upstream.